Update ShowSession.java